--- a/Source/Routindo.Plugins.Serialization.UI.Preview/MainWindow.xaml
+++ b/Source/Routindo.Plugins.Serialization.UI.Preview/MainWindow.xaml
@@ -3,10 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:views="clr-namespace:Routindo.Plugins.Serialization.UI.Views;assembly=Routindo.Plugins.Serialization.UI"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <views:JsonToFileActionView />
         
     </Grid>
 </Window>
